; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pcm/extr_channel.c_chn_setvolume.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pcm/extr_channel.c_chn_setvolume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcm_channel = type { i32 }

@SND_VOL_C_MASTER = common dso_local global i32 0, align 4
@SND_CHN_T_FL = common dso_local global i32 0, align 4
@SND_CHN_T_FR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chn_setvolume(%struct.pcm_channel* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.pcm_channel*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.pcm_channel* %0, %struct.pcm_channel** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.pcm_channel*, %struct.pcm_channel** %4, align 8
  %9 = load i32, i32* @SND_VOL_C_MASTER, align 4
  %10 = load i32, i32* @SND_CHN_T_FL, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @chn_setvolume_matrix(%struct.pcm_channel* %8, i32 %9, i32 %10, i32 %11)
  store i32 %12, i32* %7, align 4
  %13 = load %struct.pcm_channel*, %struct.pcm_channel** %4, align 8
  %14 = load i32, i32* @SND_VOL_C_MASTER, align 4
  %15 = load i32, i32* @SND_CHN_T_FR, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @chn_setvolume_matrix(%struct.pcm_channel* %13, i32 %14, i32 %15, i32 %16)
  %18 = shl i32 %17, 8
  %19 = load i32, i32* %7, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  ret i32 %21
}

declare dso_local i32 @chn_setvolume_matrix(%struct.pcm_channel*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
